--- a/visualdesign.html
+++ b/visualdesign.html
@@ -3,6 +3,19 @@
 <head>
 <meta charset="UTF-8">
 <title>Visual Design</title>
+<style type="text/css">
+h1 {
+    color: darkseagreen;
+    border-left: gray;
+    border-right: medium dotted gray;
+    border-bottom: gray;
+    border-top: gray;
+}
+body {
+    border: gray;
+    background-color: antiquewhite;
+}
+</style>
 </head>
 
 <body>
@@ -17,7 +30,7 @@
 	<a href="index.html">Home</a>
 	
 	
-	<img src="Artifacts/David A. in different font.png?.png?.png?.png" alt=""/>
+	<img src="Artifacts/David A. in different font.png?.png?.png?.png" alt ="" border="3" red;/>
 <br>
 	<img src="Artifacts/CR7 v Messi.png" width="834" height="830" alt=""/>
 <br>
@@ -32,7 +45,7 @@
 
 	<br>
 	
-	<a href="digitaldesign.html">Digital Design</a>
+	
 	
 	</body>
 	
