--- a/visualdesign.html
+++ b/visualdesign.html
@@ -6,13 +6,10 @@
 <style type="text/css">
 h1 {
     color: darkseagreen;
-    border-left: gray;
-    border-right: medium dotted gray;
-    border-bottom: gray;
-    border-top: gray;
+    border: thick dashed gray;
 }
 body {
-    border: gray;
+    
     background-color: antiquewhite;
 }
 </style>
