--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -10,8 +10,18 @@
 	<a href="visualdesign.html">VIsual Design</a>
 	
 	<a href="aboutme.html">About me</a>
-	<a href="index.html">Home</a>
 	
+	<a href="index.html">Home</a>
+	<br>
+	<br>
+	<a href="fancypoem.html">Fancied poem about one of the best songs in history.</a>
+	<br>
+	<a href="rhymingstyle.html">rHymes</a>
+	<br>
+	<a href="digitaldesign/christmas.html">Merry Christmas</a>
+	<br>
+	<a href="digitaldesign/myname.html">My Name.</a>
+	<br>
 	
 	
 	
