--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>David's PortFort Home</title>
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
