--- a/visualdesign.html
+++ b/visualdesign.html
@@ -7,11 +7,13 @@
 h1 {
     color: darkseagreen;
     border: thick dashed gray;
+	background-color: chartreuse
 }
 body {
     
     background-color: antiquewhite;
-}
+
+	}
 </style>
 </head>
 
