--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	
 	<a href="digitaldesign.html">DIgital Design</a>
 	
+	<a href="wcppage/WCP.html">WCP Page</a>
+	
 	<img src="Artifacts/Cristiano-Ronaldo-quitte-le-Real-Madrid-pour-la-Juventus-de-Turin.jpg" width="1000" height="666" alt=""/>
 </body>
 </html>
