--- a/wcppage/WCP.html
+++ b/wcppage/WCP.html
@@ -14,6 +14,12 @@
 }
 .some {
 }
+.ddlink:hover{
+	filter:blur(10px)
+}
+.ddlink:active{
+	text-shadow: blue	
+}
 </style>
 </head>
 <h1> My WCP Page</h1>
@@ -21,7 +27,9 @@
 	
 	
 <body>
-<a href="visualdesign.html" class="bcolor">VIsual Design</a>
+
+	<a href="../index.html" class="bcolor">Homepage</a>
+	<a href="visualdesign.html" class="ddlink">VIsual Design</a>
 	
 	<a href="aboutme.html" class="fade">About me</a>
 	
