--- a/wcppage/wcplab2.html
+++ b/wcppage/wcplab2.html
@@ -1,34 +1,69 @@
-<!doctype html>
+ <!doctype html>
 <html>
 <head>
 <meta charset="UTF-8">
 <title>Untitled Document</title>
 <style type="text/css">
-a:hover {
-        background-color: mistyrose
-	}
-a:active {
-      background-color: mediumblue
-	}
-.vdlink:active {
-        font-size: 15px;
-  	}
-.vdlink:hover {
-      font-size: 20px;
-	}
-.textchange {
+.bcolor:hover {
+	background-color:blue;
 }
-</style>
-</head>
+.fade {
+	
+	.sizechange:font-size    10px;
+}
+.some {
+}
+.ddlink:hover{
+	filter:blur(10px)
+}
+.ddlink:active{
+	text-shadow: blue	
+}
 
+	.aboutme:hover{
+    text-shadow: 20px 0px #FF0004			
+	}
+	
+	.aboutme:active{
+    text-shadow: 0 5px #D20D10
+			}
+	{
+		
+		
+	}
+	
+	.pool { border:dashed
+		
+}
+
+	.sizechange:hover{
+		 font-size: 30px
+		
+	}
+.sizechange:active{
+		 font-size:12px
+		
+	}	
+	
+	
+	
+	</style>
+</head>
+<h1> My WCP Page</h1>
+
+	
+	
 <body>
 
-<h1 class="textchange">Lab on Pseudo Selectors</h1>
+	<a href="../index.html" class="bcolor">Homepage</a>
+	<a href="visualdesign.html" class="sizechange">VIsual Design</a>
 	
-	<a href="WCP.html">WCP Home</a>
+	<a href="aboutme.html" class="aboutme">About me</a>
+	
+	<a href="digitaldesign.html" class="ddlink">DIgital Design</a>
+	
+		<a href="wcppage/WCP.html" class="pool">WCP Page</a>
 	
 	
-	
-	
-	</body>
+</body>
 </html>
