--- a/wcppage/wcplab2.html
+++ b/wcppage/wcplab2.html
@@ -56,11 +56,11 @@
 <body>
 
 	<a href="../index.html" class="bcolor">Homepage</a>
-	<a href="visualdesign.html" class="sizechange">VIsual Design</a>
+	<a href="../visualdesign.html" class="sizechange">VIsual Design</a>
 	
-	<a href="aboutme.html" class="aboutme">About me</a>
+	<a href="../aboutme.html" class="aboutme">About me</a>
 	
-	<a href="digitaldesign.html" class="ddlink">DIgital Design</a>
+	<a href="../digitaldesign.html" class="ddlink">DIgital Design</a>
 	
 		<a href="wcppage/WCP.html" class="pool">WCP Page</a>
 	
