--- a/wcppage/WCP.html
+++ b/wcppage/WCP.html
@@ -38,5 +38,6 @@
 		<a href="wcppage/WCP.html" class="some">WCP Page</a>
 	
 	
+<a href="wcplab2.html">WCP Lab 2</a><a href="wcplab3.html">WCP Lab 3</a>
 </body>
 </html>
