--- a/WCP.html
+++ b/WCP.html
@@ -9,9 +9,16 @@
 }
 .fade {
 }
-.sizechange {
+.sizechange:font-size
+	{     10px;
 }
 .some {
+}
+.ddlink:hover{
+	filter:blur(10px)
+}
+.ddlink:active{
+	text-shadow: blue	
 }
 </style>
 </head>
@@ -20,7 +27,9 @@
 	
 	
 <body>
-<a href="visualdesign.html" class="bcolor">VIsual Design</a>
+
+	<a href="../index.html" class="bcolor">Homepage</a>
+	<a href="visualdesign.html" class="ddlink">VIsual Design</a>
 	
 	<a href="aboutme.html" class="fade">About me</a>
 	
@@ -29,5 +38,11 @@
 		<a href="wcppage/WCP.html" class="some">WCP Page</a>
 	
 	
-</body>
+<a href="wcplab2.html">WCP Lab 2</a>
+	
+	<a href="wcplab3.html">WCP Lab 3</a>
+
+	
+	<a href="wcplab4.html">WCP Lab 4</a>
+	</body>
 </html>
