--- a/wcppage/wcplab5.html
+++ b/wcppage/wcplab5.html
@@ -68,8 +68,25 @@ body{
    <input type="checkbox" name="Interests" value="Toni Kroos" id="Interests_0">
     Toni Kroos</label>
 		<br>
-		
-  <input type="reset"><input type="submit">
+      <p>
+	      <label>
+	        <input type="radio" name="Where did you hear about it" value="Billboard" id="Wheredidyouhearaboutit_0">
+	        Billboard</label>
+	      <br>
+	      <label>
+	        <input type="radio" name="Where did you hear about it" value="Online Advertisement" id="Wheredidyouhearaboutit_1">
+	        Online Advertisement</label>
+	      <br>
+	      <label>
+	        <input type="radio" name="Where did you hear about it" value="Email" id="Wheredidyouhearaboutit_2">
+	        Email</label>
+	      <br>
+	      <label>
+	        <input type="radio" name="Where did you hear about it" value="From a friend" id="Wheredidyouhearaboutit_3">
+	        From a friend</label>
+	      <br>
+      </p>
+      <input type="reset"><input type="submit">
 </form>
 </body>
 </html>
