--- a/digitaldesign/digitaldesign.html
+++ b/digitaldesign/digitaldesign.html
@@ -3,16 +3,18 @@
 <head>
 <meta charset="UTF-8">
 <title>Untitled Document</title>
+<link href="style.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-<h1>Digital Design</h1>
-	<a href="visualdesign.html">VIsual Design</a>
-	
-	<a href="aboutme.html">About me</a>
-	
-	<a href="index.html">Home</a>
-	<br>
+<h1 class="center">About Me</h1>
+	<div class="topnav">
+  <a href="index.html">Home</a>
+  <a href="visualdesign.html">Visual Design</a>
+  <a href="digitaldesign/digitaldesign.html">Digital Desgin</a>
+  <a class="active" href="aboutme.html">About Me</a>
+  <a href="wcppage/WCP.html">WCP</a>
+</div>
 	<br>
 	<a href="fancypoem.html">Fancied poem about one of the best songs in history.</a>
 	<br>
