--- a/digitaldesign.html
+++ b/digitaldesign.html
@@ -10,7 +10,7 @@
 	<div class="topnav">
   <a href="index.html">Home</a>
   <a href="visualdesign.html">Visual Design</a>
-  <a class="active" href="digitaldesign.html">Digital Desgin</a>
+  <a class="active" href="digitaldesign.html">Digital Design</a>
   <a href="aboutme.html">About Me</a>
   <a href="WCP.html">WCP</a>
 </div>
